# chatbot-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
chatbot_lab/: __main__.py
chatbot_lab/docs_examples/: example_selector.py  prompt_template.py
chatbot_lab/notion_bot/: run.py
chatbot_lab/pdf_bot/: run.py
chatbot_lab/support/support_docs/: run.py
chatbot_lab/support/support_github/: fetch.py  ingest.py  run.py
chatbot_lab/utils/: api.py  data.py  history.py
chatbot_lab/wiki/wiki_page/: run.py
chatbot_lab/wiki/wiki_page_fr/: run.py
chatbot_lab/wiki/wiki_paragraph/: run.py
